--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Alternative news</title>
+  <title>VIBBIDI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="styles.css">
@@ -13,8 +13,7 @@
 
 <body>
   <header>
-    <h1>Alternative news</h1>
-    <select id="sources"></select>
+    <h1>VIBBIDI</h1>
   </header>
   <main></main>
   <script src="app.js"></script>
