--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
   <header>
     <h1>VIBBIDI</h1>
   </header>
+  <div>
+  <video controls poster="http://berserker2.vibbidi-vid.com/vibbidi-us/videos/video___XpOH2lWFEl8.mp4.jpg">
+    <source src="http://berserker2.vibbidi-vid.com/vibbidi-us/videos/video___XpOH2lWFEl8.mp4" type="video/mp4" />
+    Your browser does not support HTML5 video.
+  </video>
+  <audio controls>
+    <source src="http://berserker2.vibbidi-vid.com/vibbidi-us/videos/video___XpOH2lWFEl8.mp4.mp3" type="audio/mpeg" />
+    Your browser does not support HTML5 audio.
+  </audio>
+</div>
   <main></main>
   <script src="app.js"></script>
 </body>
