--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h1>VIBBIDI</h1>
   </header>
   <div>
+    <h3>Direct</h3>
   <video controls poster="http://berserker2.vibbidi-vid.com/vibbidi-us/videos/video___XpOH2lWFEl8.mp4.jpg">
     <source src="http://berserker2.vibbidi-vid.com/vibbidi-us/videos/video___XpOH2lWFEl8.mp4" type="video/mp4" />
     Your browser does not support HTML5 video.
@@ -25,6 +26,7 @@
     Your browser does not support HTML5 audio.
   </audio>
 </div>
+<h3>APIs</h3>
   <main></main>
   <script src="app.js"></script>
 </body>
