--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1>VIBBIDI</h1>
+    <h1>VIBBIDI v0.1.2</h1>
   </header>
   <main></main>
   <script src="app.js"></script>
