--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="cache.manifest">
 
 <head>
   <meta charset="UTF-8">
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1>VIBBIDI v0.1.3</h1>
+    <h1>VIBBIDI v0.1.4</h1>
   </header>
   <main></main>
   <script src="app.js"></script>
