--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" manifest="cache.manifest">
-
+<!-- <html lang="en" manifest="cache.manifest"> -->
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>VIBBIDI</title>
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1>VIBBIDI v0.1.4</h1>
+    <h1>VIBBIDI v0.1.5</h1>
   </header>
   <main></main>
   <script src="app.js"></script>
