--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <title>VIBBIDI</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" />
+  <meta property="og:site_name" content="News" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="white" />
+  <meta name="apple-mobile-web-app-title" content="News" />
+  <meta name="mobile-web-app-capable" content="yes" />
   <link rel="shortcut icon" href="favicon.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#ffffff" />
+  <link rel="apple-touch-icon" sizes="192x192" href="images/icons/icon-192x192.png" />
 </head>
 
 <body>
