remove ApplicationCache from iOS Safari

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" manifest="cache.manifest">
-<!-- <html lang="en"> -->
+<!-- <html lang="en" manifest="cache.manifest"> -->
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>VIBBIDI</title>
@@ -19,7 +19,7 @@
 
 <body>
   <header>
-    <h1>VIBBIDI v0.1.15</h1>
+    <h1>VIBBIDI v0.1.16</h1>
     <h2>
         <div id='status'>No status</div>
       </h2>
