--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 
 <body>
   <header>
-    <h1>VIBBIDI v0.1.20</h1>
-    <h2>
-        <div id='status'>No status</div>
-      </h2>
+    <h1 id='version'>VIBBIDI 0.1.21</h1>
+    <h2 id='status'>No status</h2>
   </header>
   <main>
       <div class="video-wrapper">
