--- a/index.html
+++ b/index.html
@@ -19,9 +19,27 @@
 
 <body>
   <header>
-    <h1 id='version'>VIBBIDI 0.1.21</h1>
+    <h1 id='version'>VIBBIDI 0.1.22</h1>
     <h2 id='status'>No status</h2>
   </header>
+  <div class="video-wrapper">
+      <h2>Sample Video 1</h2>
+      <video controls class="my-video">
+        <source src="https://thepaciellogroup.github.io/AT-browser-tests/video/ElephantsDream.mp4" type="video/mp4" />
+        Your browser does not support HTML5 video.
+      </video>
+  </div>
+
+  <div class="video-wrapper">
+      <h2>Sample Video 2</h2>
+      <video controls class="my-video">
+        <source src="https://www.quirksmode.org/html5/videos/big_buck_bunny.mp4" type="video/mp4" />
+        Your browser does not support HTML5 video.
+      </video>
+  </div>
+
+  
+
   <main>
       <div class="video-wrapper">
           <h2>63094566518315</h2>
@@ -34,21 +52,9 @@
             Your browser does not support HTML5 audio.
           </audio>
       </div>
-      
-    
-      <div class="video-wrapper">
-          <h2>529952183555395</h2>
-          <video controls="" poster="https://berserker3.vibbidi-vid.com/vibbidi-us/videos/video___fwK7ggA3-bU.mp4.jpg" class="my-video">
-            <source src="https://berserker3.vibbidi-vid.com/vibbidi-us/videos/video___fwK7ggA3-bU.mp4" type="video/mp4">
-            Your browser does not support HTML5 video.
-          </video>
-          <audio controls="" class="my-audio">
-            <source src="https://berserker3.vibbidi-vid.com/vibbidi-us/videos/video___fwK7ggA3-bU.mp4.mp3" type="audio/mpeg">
-            Your browser does not support HTML5 audio.
-          </audio>
-      </div>
       </main>
   <script src="app.js"></script>
 </body>
 
 </html>
+  
