--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
     <h1 id='version'>VIBBIDI 0.1.22</h1>
     <h2 id='status'>No status</h2>
   </header>
-  <div class="video-wrapper">
-      <h2>Sample Video 1</h2>
-      <video controls class="my-video">
-        <source src="https://thepaciellogroup.github.io/AT-browser-tests/video/ElephantsDream.mp4" type="video/mp4" />
-        Your browser does not support HTML5 video.
-      </video>
-  </div>
 
   <div class="video-wrapper">
       <h2>Sample Video 2</h2>
@@ -38,6 +31,10 @@
       </video>
   </div>
 
+  <audio controls class="my-audio">
+      <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg" />
+      Your browser does not support HTML5 audio.
+    </audio>
   
 
   <main>
