--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 <body>
   <header>
-    <h1 id='version'>VIBBIDI 0.1.22</h1>
+    <h1 id='version'>VIBBIDI 0.1.24</h1>
     <h2 id='status'>No status</h2>
   </header>
 
-  <div class="video-wrapper">
+  <!-- <div class="video-wrapper">
       <h2>Sample Video 2</h2>
       <video controls class="my-video">
         <source src="https://www.quirksmode.org/html5/videos/big_buck_bunny.mp4" type="video/mp4" />
@@ -34,7 +34,7 @@
   <audio controls class="my-audio">
       <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg" />
       Your browser does not support HTML5 audio.
-    </audio>
+    </audio> -->
   
 
   <main>
