--- a/index.html
+++ b/index.html
@@ -19,24 +19,9 @@
 
 <body>
   <header>
-    <h1 id='version'>VIBBIDI 0.1.24</h1>
+    <h1 id='version'>VIBBIDI 0.1.25</h1>
     <h2 id='status'>No status</h2>
   </header>
-
-  <!-- <div class="video-wrapper">
-      <h2>Sample Video 2</h2>
-      <video controls class="my-video">
-        <source src="https://www.quirksmode.org/html5/videos/big_buck_bunny.mp4" type="video/mp4" />
-        Your browser does not support HTML5 video.
-      </video>
-  </div>
-
-  <audio controls class="my-audio">
-      <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg" />
-      Your browser does not support HTML5 audio.
-    </audio> -->
-  
-
   <main>
       <div class="video-wrapper">
           <h2>63094566518315</h2>
@@ -50,6 +35,11 @@
           </audio>
       </div>
       </main>
+      <audio controls class="my-audio">
+          <source src="https://riorun.theguardian.com/mp3/foreground/01-val-welcome.mp3" type="audio/mpeg" />
+          Your browser does not support HTML5 audio.
+        </audio> 
+
   <script src="app.js"></script>
 </body>
 
