--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <header>
-    <h1 id='version'>VIBBIDI 0.1.25</h1>
+    <h1 id='version'>VIBBIDI 0.1.26</h1>
     <h2 id='status'>No status</h2>
   </header>
   <main>
@@ -35,10 +35,12 @@
           </audio>
       </div>
       </main>
+
+      <!-- <h2>Test</h2>
       <audio controls class="my-audio">
           <source src="https://riorun.theguardian.com/mp3/foreground/01-val-welcome.mp3" type="audio/mpeg" />
           Your browser does not support HTML5 audio.
-        </audio> 
+        </audio>  -->
 
   <script src="app.js"></script>
 </body>
